--- a/index.html
+++ b/index.html
@@ -27,10 +27,7 @@
         <div class="profile">
             <img class="profile-img" src="Images/DSC_0062.png" alt="profile">
             <h2>Hello.</h2>
-            <p class="intro">Meet Manoj, a talented programmer with a wealth of experience in several programming
-                languages including C, C++, Java, and Python. With a passion for developing complex software
-                applications, Manoj has honed their skills as a full-stack web developer and continues to pursue their
-                interest in machine learning. </p>
+            <p class="intro">Highly motivated full-stack developer with a proven track record of crafting user-friendly, scalable web apps using the MERN stack. Mastered Tailwind CSS & Next.js to build stunning, responsive interfaces that captivate users. Leverage Java OOP expertise to design & implement robust, maintainable software systems. Passionate about pushing boundaries, recently applied my skills to a deep learning project utilizing CNNs.</p>
         </div>
         <hr>
         <div class="Skills">
@@ -70,10 +67,23 @@
                 <div class="p2">
                     <img class="skill-2" src="Images/skills.png" alt="Skill">
                     <h3 class="s2">Open Source</h3>
-                    <p class="s-c-1">In their free time, Manoj enjoys attending programming conferences, participating
-                        in hackathons, and contributing to open-source projects. With their passion for programming and
-                        their wealth of experience, [Your Name] is sure to make a positive impact in any software
-                        development team they become a part of.</p>
+                    <p class="s-c-1"> Participated in Hacktoberfest, 
+making impactful contributions 
+to open-source projects on 
+GitHub. Collaborated with 
+global teams, completed pull 
+requests, and gained 
+proficiency in version control, 
+issue tracking, and 
+collaborative development 
+practices. Recognized for 
+contributions by both sponsors 
+and project maintainers, 
+demonstrating a commitment 
+to the open-source community 
+and a dedication to continuous 
+improvement in technical and 
+collaborative skills.</p>
                 </div>
             </div>
         </div>
@@ -89,11 +99,11 @@
     </div>
 
     <div class="bottom-container">
-        <a class="footer-link" target="_blank" href="https://www.linkedin.com/in/manoj-a04415221/">LinkedIn</a>
-        <a class="footer-link" target="_blank" href="https://twitter.com/mxnoj03">Twitter</a>
+        <a class="footer-link" target="_blank" href="https://www.linkedin.com/in/manoj1803/">LinkedIn</a>
+        <a class="footer-link" target="_blank" href="https://twitter.com/mxnoj18">Twitter</a>
         <a class="footer-link" target="_blank" href="https://instagram.com/mxnoj18">Instagram</a>
         <a class="footer-link" target="_blank" href="https://github.com/manojku1803">GitHub</a>
-        <p class="copyright ">© 2022 Manoj Kumar Pradhan</p>
+        <p class="copyright ">© Manoj Kumar Pradhan</p>
     </div>
 </body>
 
